syntax = "proto3";

import "common_request.proto";

option java_multiple_files = true;
option java_package = "com.yelixian.beiqi.proto";
option java_outer_classname = "UploadPicProto";
option objc_class_prefix = "BQ";

package beiqi;

// 上传文件相关接口
service Upload {
    //上传图片
    rpc UploadPic (UploadPicRequest) returns (UploadPicReply) {}
}

//上传图片 request
message UploadPicRequest {
    //图片文件
    bytes pic_content = 1;
    //基础request包
    CommonRequest common_request = 2;
}

//上传图片 response
message UploadPicReply {
    //图片url
    string pic_url = 1;
    //错误码
    int32 err_code = 2;
    //错误信息
    string err_message = 3;
}